@@ -86,6 +86,7 @@ usage () {
     echo <<EOF
 usage: $0 [check|reload|stop|save]
 EOF
+}
 
 case "$1" in
     check)
